# CS529-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
Project1/: generate_questions.py  lesson_quiz_overview.ipynb  orchestration_diagram.html  quiz_assessment.py  read_document.py  requirements.txt
Project1/api/: assessment_result_router.py  auth_otp_router.py  generate_questions_router.py  main.py  quiz_assessment_router.py  read_document_router.py  settings_router.py
Project1/ui/src/: App.css  App.js
